дополения пиксель перфект

--- a/source/form.html
+++ b/source/form.html
@@ -40,7 +40,7 @@
                 <a class="main-nav__link main-nav__link--current" href="#">Конкурс</a>
               </li>
               <li class="main-nav__item">
-                <a class="main-nav__link" href="#">Html Academy</a>
+                <a class="main-nav__link" href="#"><span class="main-nav__link--uppercase">Html</span> Academy</a>
               </li>
             </ul>
           </nav>
