--- a/source/index.html
+++ b/source/index.html
@@ -40,7 +40,7 @@
                 <a class="main-nav__link" href="form.html">Конкурс</a>
               </li>
               <li class="main-nav__item">
-                <a class="main-nav__link" href="#">Html Academy</a>
+                <a class="main-nav__link" href="#"><span class="main-nav__link--uppercase">Html</span> Academy</a>
               </li>
             </ul>
           </nav>
@@ -83,19 +83,19 @@
             </li>
             <li class="suggests__item suggests__item--world">
               <h3 class="suggests__title">Меняет мир вокруг</h3>
-              <p class="suggests__desc">Сделайте снимок и украсьте его смайликом или текстовой подписью, чтобы усилить&nbsp;эффект</p>
+              <p class="suggests__desc">Сделайте снимок и украсьте&nbsp;его смайликом или&nbsp;текстовой подписью, чтобы усилить&nbsp;эффект</p>
             </li>
             <li class="suggests__item suggests__item--friends">
-              <h3 class="suggests__title">Заводит новых друзей</h3>
-              <p class="suggests__desc">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями и заводите новых</p>
+              <h3 class="suggests__title">Заводит новых&nbsp;друзей</h3>
+              <p class="suggests__desc">Ставьте лайки, комментируйте, делитесь фотографиями с друзьями&#160;<br class="suggests__desc-br"> и заводите новых</p>
             </li>
           </ul>
         </div>
       </section>
       <article class="research">
         <div class="research__wrapper">
-          <h2 class="research__title">Эффект<br>на 24 часа!</h2>
-          <p class="research__text">Британские ученые провели исследования и&nbsp;доказали, что положительный эффект от&nbsp;использования приложения длится целые сутки!</p>
+          <h2 class="research__title">Эффект&#160;<br>на 24 часа!</h2>
+          <p class="research__text">Британские ученые провели исследования и&nbsp;доказали, что&nbsp;положительный эффект от&nbsp;использования приложения длится целые сутки!</p>
           <a class="research__link" href="#">Узнать больше об исследовании</a>
         </div>
       </article>
