--- a/source/catalog.html
+++ b/source/catalog.html
@@ -40,7 +40,7 @@
                 <a class="main-nav__link" href="form.html">Конкурс</a>
               </li>
               <li class="main-nav__item">
-                <a class="main-nav__link" href="#">Html Academy</a>
+                <a class="main-nav__link" href="#"><span class="main-nav__link--uppercase">Html</span> Academy</a>
               </li>
             </ul>
           </nav>
@@ -53,11 +53,11 @@
     </header>
     <main class="page-catalog sticky-footer">
       <section class="catalog">
-        <h2 class="catalog__title">Взгляните на фотографии, которые выкладывают пользователи! Видите, как не хватает ваших?</h2>
+        <h2 class="catalog__title">Взгляните на фотографии, которые выкладывают пользователи!&#160;<br class="catalog__title-br">Видите, как не хватает ваших?</h2>
         <div class="catalog__list-wrapper">
           <ul class="catalog__list">
             <li class="catalog__item catalog__item--panorama">
-              <a class="catalog__item-link" href="#">
+              <a class="catalog__item-link catalog__item-link--panorama" href="#">
                 <picture>
                   <source type="image/webp" media="(min-width: 1200px)" srcset="img/catalog-item/panorama-desktop.webp 1x, img/catalog-item/panorama-desktop@2x.webp 2x">
                   <source type="image/jpeg" media="(min-width: 1200px)" srcset="img/catalog-item/panorama-desktop.jpg 1x, img/catalog-item/panorama-desktop@2x.jpg 2x">
@@ -72,7 +72,7 @@
                   <cite class="catalog__autor">Анна</cite>
                   <span class="catalog__time">(5 минут назад)</span>
                 </div>
-                <p class="catalog__text">Прыгать или нет? Напишите в комментарии свой совет и смотрите прямую трансляцию в перископе, задавайте свои вопросы!</p>
+                <p class="catalog__text">Прыгать или нет? Напишите в комментарии свой совет и смотрите&nbsp;прямую трансляцию в перископе, задавайте свои вопросы!</p>
                 <p class="catalog__likes catalog__likes--panorama">Нравится:<span class="catalog__likes-number"> 215</span></p>
               </div>
             </li>
@@ -92,7 +92,7 @@
                   <cite class="catalog__autor">Левон</cite>
                   <span class="catalog__time">(5 часов назад)</span>
                 </div>
-                <p class="catalog__text">Вчера он на луну летал, сегодня в руки к нам попал.</p>
+                <p class="catalog__text">Вчера он на луну летал, сегодня в руки&nbsp;к нам попал.</p>
                 <p class="catalog__likes">Нравится:<span class="catalog__likes-number"> 356</span></p>
               </div>
             </li>
