Пиксель перфект завершен

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -214,35 +214,35 @@
           </label>
           <div class="post__control-wrapper">
             <div class="post__range">
-              <div class="post__toggle">
-                <div class="post__toggle-type post__toggle-type--current post__toggle-type--crop">
+              <div class="post__toggle post__toggle--crop">
+                <button class="post__toggle-type post__toggle-type--current post__toggle-type--crop" type="button">
                   <span class="visually-hidden">Кадрирование</span>
                   <svg width="44" height="44" aria-hidden="true" focusable="false">
                     <use href="img/sprite.svg#crop-icon"></use>
                   </svg>
-                </div>
+                </button>
                 <div class="post__toggle-line">
                   <button class="post__toggle-button post__toggle-button--crop" type="button"><span class="visually-hidden">Изменить значение</span></button>
                 </div>
               </div>
-              <div class="post__toggle">
-                <div class="post__toggle-type post__toggle-type--fill">
+              <div class="post__toggle post__toggle--fill">
+                <button class="post__toggle-type post__toggle-type--fill" type="button">
                   <span class="visually-hidden">Заливка</span>
                   <svg width="48" height="43" aria-hidden="true" focusable="false">
                     <use href="img/sprite.svg#fill-icon"></use>
                   </svg>
-                </div>
+                </button>
                 <div class="post__toggle-line">
                   <button class="post__toggle-button post__toggle-button--fill" type="button"><span class="visually-hidden">Изменить значение</span></button>
                 </div>
               </div>
-              <div class="post__toggle">
-                <div class="post__toggle-type post__toggle-type--contrast">
+              <div class="post__toggle post__toggle--contrast">
+                <button class="post__toggle-type post__toggle-type--contrast" type="button">
                   <span class="visually-hidden">Контраст</span>
                   <svg width="32" height="32" aria-hidden="true" focusable="false">
                     <use href="img/sprite.svg#contrast-icon"></use>
                   </svg>
-                </div>
+                </button>
                 <div class="post__toggle-line">
                   <button class="post__toggle-button post__toggle-button--contrast" type="button"><span class="visually-hidden">Изменить значение</span></button>
                 </div>
