--- a/source/form.html
+++ b/source/form.html
@@ -53,7 +53,7 @@
     </header>
     <main class="page-form sticky-footer">
       <section class="contest">
-        <h2 class="contest__title">Поделитесь своей историей и получите шанс выиграть ценный приз — 1000 миль на вашу бонусную карту!</h2>
+        <h2 class="contest__title">Поделитесь своей историей и получите шанс выиграть ценный приз — 1000 миль на вашу бонусную карту!&thinsp;<span class="contest__title--hidden">Пожалуйста, заполните форму ниже:</span></h2>
         <form class="contest__form" action="https://echo.htmlacademy.ru">
           <fieldset class="contest__user">
             <div class="field field--user">
@@ -70,7 +70,7 @@
             </div>
           </fieldset>
           <fieldset class="contest__journey">
-            <span class="contest__legend contest__legend--journey">Ваши безбашенные достижения в путешествии</span>
+            <span class="contest__legend contest__legend--journey">Ваши безбашенные&#160;<br class="contest__legend--br">достижения в путешествии</span>
             <label class="contest__label contest__label--journey control control--user">
               <input class="visually-hidden control__input" name="crazy-journey" value="selfie-with-shark" type="checkbox" checked>
               <span class="control__mark"></span>
@@ -214,7 +214,7 @@
           <p class="modal__text">Спасибо за ваше участие, ваша заявка уже поступила к нам. В ближайшее время мы рассмотрим ее и оповестим&nbsp;вас.</p>
         </div>
         <div class="modal__gray">
-          <button class="page-form__button modal__button" type="button">Закрыть окно</button>
+          <button class="page-form__button modal__button modal__button--success-desktop" type="button">Закрыть окно</button>
         </div>
       </div>
     </section>
