--- a/source/form.html
+++ b/source/form.html
@@ -15,21 +15,21 @@
       <div class="main-nav">
         <div class="main-nav__container main-nav__container--closed main-nav__container--nojs">
           <a class="page-header__logo main-nav__logo" href="#" aria-label="Логотип Pink.">
-            <svg class="page-header__logo-img--visible-mobile" width="74" height="23" aria-hidden="true" focusable="false">
+            <svg class="page-header__logo-img page-header__logo-img--visible-mobile" width="74" height="23" aria-hidden="true" focusable="false">
               <use href="img/sprite.svg#header-logo-img-mobile"></use>
             </svg>
-            <svg class="page-header__logo-img--visible-tablet" width="145" height="40"  aria-hidden="true" focusable="false">
+            <svg class="page-header__logo-img page-header__logo-img--visible-tablet" width="145" height="40"  aria-hidden="true" focusable="false">
               <use href="img/sprite.svg#header-logo-img-tablet"></use>
             </svg>
-            <svg class="page-header__logo-img--visible-desktop" width="147" height="40" aria-hidden="true" focusable="false">
+            <svg class=" page-header__logo-img page-header__logo-img--visible-desktop" width="147" height="40" aria-hidden="true" focusable="false">
               <use href="img/sprite.svg#header-logo-img-desktop"></use>
             </svg>
           </a>
           <nav class="main-nav__switch main-nav__switch--closed main-nav__switch--nojs">
-            <button class="main-nav__toggle" type="button">
+            <button class="main-nav__toggle main-nav__toggle--nojs" type="button">
               <span class="visually-hidden">Открыть меню навигации</span>
             </button>
-            <ul class="main-nav__list">
+            <ul class="main-nav__list main-nav__list--nojs">
               <li class="main-nav__item">
                 <a class="main-nav__link" href="index.html">Главная</a>
               </li>
@@ -40,20 +40,19 @@
                 <a class="main-nav__link main-nav__link--current" href="#">Конкурс</a>
               </li>
               <li class="main-nav__item">
-                <a class="main-nav__link" href="#"><span class="main-nav__link--uppercase">Html</span> Academy</a>
+                <a class="main-nav__link" href="#"><span class="main-nav__link-html main-nav__link-html--uppercase">Html</span> Academy</a>
               </li>
             </ul>
           </nav>
         </div>
       </div>
-      <script src="js/burger.js"></script>
       <div class="page-title">
         <h1 class="page-title__inset-page">Конкурс на самое безбашенное<br>путешествие с Пинк</h1>
       </div>
     </header>
     <main class="page-form sticky-footer">
       <section class="contest">
-        <h2 class="contest__title">Поделитесь своей историей и получите шанс выиграть ценный приз — 1000 миль на вашу бонусную карту!&thinsp;<span class="contest__title--hidden">Пожалуйста, заполните форму ниже:</span></h2>
+        <h2 class="contest__title">Поделитесь своей историей и получите шанс выиграть ценный приз — 1000 миль на вашу бонусную карту!&thinsp;<span class="contest__title-text--hidden">Пожалуйста, заполните форму ниже:</span></h2>
         <form class="contest__form" action="https://echo.htmlacademy.ru">
           <fieldset class="contest__user">
             <div class="field field--user">
@@ -70,7 +69,7 @@
             </div>
           </fieldset>
           <fieldset class="contest__journey">
-            <span class="contest__legend contest__legend--journey">Ваши безбашенные&#160;<br class="contest__legend--br">достижения в путешествии</span>
+            <span class="contest__legend contest__legend--journey">Ваши безбашенные&#160;<br class="contest__legend-br">достижения в путешествии</span>
             <label class="contest__label contest__label--journey control control--user">
               <input class="visually-hidden control__input" name="crazy-journey" value="selfie-with-shark" type="checkbox" checked>
               <span class="control__mark"></span>
@@ -106,13 +105,13 @@
             <span class="contest__legend contest__legend--feedback">Контактная информация</span>
             <div class="field field--feedback field--phone">
               <label class="field__label" for="phone">НОМЕР ТЕЛЕФОНА</label>
-              <div class="field__input-wrapper--phone">
+              <div class="field__input-wrapper field__input-wrapper--phone">
                 <input class="field__input" name="phone" id="phone" type="tel" placeholder="Номер, пожалуйста">
               </div>
             </div>
             <div class="field field--feedback ">
               <label class="field__label" for="email">АДРЕС ПОЧТЫ</label>
-              <div class="field__input-wrapper--email">
+              <div class="field__input-wrapper field__input-wrapper--email">
                 <input class="field__input" name="email" id="email" type="email" placeholder="Введите почту *">
               </div>
             </div>
@@ -151,10 +150,10 @@
     <footer class="page-footer">
       <div class="page-footer__wrapper">
         <a class="page-footer__logo" href="#" aria-label="Логотип Pink.">
-          <svg class="page-footer__logo-img--visible-mobile" aria-hidden="true" focusable="false" width="145" height="40">
+          <svg class="page-footer__logo-img page-footer__logo-img--visible-mobile" aria-hidden="true" focusable="false" width="145" height="40">
             <use href="img/sprite.svg#footer-logo-mobile"></use>
           </svg>
-          <svg class="page-footer__logo-img--visible-desktop" width="147" height="40" aria-hidden="true" focusable="false">
+          <svg class="page-footer__logo-img page-footer__logo-img--visible-desktop" width="147" height="40" aria-hidden="true" focusable="false">
             <use href="img/sprite.svg#footer-logo-desktop"></use>
           </svg>
         </a>
@@ -199,7 +198,7 @@
       </div>
     </footer>
     <section class="modal">
-      <div class="modal__error--close">
+      <div class="modal__error modal__error--close">
         <div class="modal__wrapper">
           <h2 class="modal__title">Что-то пошло не&nbsp;так!</h2>
           <p class="modal__text">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
@@ -208,7 +207,7 @@
           <button class="page-form__button modal__button" type="button">Ок</button>
         </div>
       </div>
-      <div class="modal__success--close">
+      <div class="modal__success modal__success--close">
         <div class="modal__wrapper">
           <h2 class="modal__title">Ваша заявка отправлена</h2>
           <p class="modal__text">Спасибо за ваше участие, ваша заявка уже поступила к нам. В ближайшее время мы рассмотрим ее и оповестим&nbsp;вас.</p>
@@ -218,5 +217,6 @@
         </div>
       </div>
     </section>
+    <script src="js/burger.js"></script>
   </body>
 </html>
