Исправления после проверки

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="page" lang="ru">
+<html lang="ru">
   <head>
     <meta charset="utf-8">
     <title>Пинк: Фотографии</title>
@@ -10,7 +10,7 @@
     <link rel="manifest" href="manifest.webmanifest">
     <link rel="stylesheet" href="css/style.min.css">
   </head>
-  <body class="page__body">
+  <body>
     <header class="page-header page-header--inset">
       <div class="main-nav">
         <div class="main-nav__container main-nav__container--closed main-nav__container--nojs">
@@ -50,7 +50,7 @@
         <h1 class="page-title__inset-page">Фотографии<br>пользователей</h1>
       </div>
     </header>
-    <main class="page-catalog sticky-footer">
+    <main class="sticky-footer">
       <section class="catalog">
         <h2 class="catalog__title">Взгляните на фотографии, которые выкладывают пользователи!&#160;<br class="catalog__title-br">Видите, как не хватает ваших?</h2>
         <div class="catalog__list-wrapper">
