--- a/source/index.html
+++ b/source/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="page" lang="ru">
+<html lang="ru">
   <head>
     <meta charset="utf-8">
     <title>Пинк</title>
@@ -10,7 +10,7 @@
     <link rel="manifest" href="manifest.webmanifest">
     <link rel="stylesheet" href="css/style.min.css">
   </head>
-  <body class="page__body">
+  <body>
     <header class="page-header page-header--index">
       <div class="main-nav">
         <div class="main-nav__container main-nav__container--closed main-nav__container--nojs">
@@ -67,7 +67,7 @@
         </div>
       </section>
     </header>
-    <main class="page-index sticky-footer">
+    <main class="sticky-footer">
       <section class="suggests">
         <h2 class="visually-hidden">Наши предложения</h2>
         <div class="suggests__head-titles">
@@ -129,7 +129,7 @@
             <button class="slider__toggle" type="button"><span class="visually-hidden">2</span></button>
             <button class="slider__toggle" type="button"><span class="visually-hidden">3</span></button>
           </p>
-          <div class="rewiew__arrows">
+          <div class="review__arrows">
             <button class="review__arrow review__arrow--left">
               <span class="visually-hidden">Предыдущий слайд</span>
               <svg width="22" height="41" aria-hidden="true" focusable="false">
@@ -145,7 +145,7 @@
           </div>
         </div>
       </section>
-      <section class="tariffs">
+      <section class="tariffs slider">
         <h2 class="visually-hidden">Тарифы приложения</h2>
         <table class="tariffs__table">
           <thead class="tariffs__item">
@@ -167,7 +167,7 @@
           </thead>
           <tr class="tariffs__options">
             <th class="tariffs__options-name">Розовый фильтр</th>
-            <td class="tariffs__option-value tariffs__option-value--base tariffs__option-value tariffs__option-value--yes"><span class="tariffs__option-name-value">Розовый фильтр</span></td>
+            <td class="tariffs__option-value tariffs__option-value--base tariffs__option-value--yes"><span class="tariffs__option-name-value">Розовый фильтр</span></td>
             <td class="tariffs__option-value tariffs__option-value--standart tariffs__option-value--yes"><span class="tariffs__option-name-value tariffs__option-name-value--current">Розовый фильтр</span></td>
             <td class="tariffs__option-value tariffs__option-value--unlim tariffs__option-value--yes"><span class="tariffs__option-name-value">Розовый фильтр</span></td>
           </tr>
