--- a/source/form.html
+++ b/source/form.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html class="page" lang="ru">
+<html lang="ru">
   <head>
     <meta charset="utf-8">
     <title>Пинк: Конкурс</title>
@@ -10,7 +10,7 @@
     <link rel="manifest" href="manifest.webmanifest">
     <link rel="stylesheet" href="css/style.min.css">
   </head>
-  <body class="page__body">
+  <body>
     <header class="page-header page-header--inset">
       <div class="main-nav">
         <div class="main-nav__container main-nav__container--closed main-nav__container--nojs">
@@ -21,7 +21,7 @@
             <svg class="page-header__logo-img page-header__logo-img--visible-tablet" width="145" height="40"  aria-hidden="true" focusable="false">
               <use href="img/sprite.svg#header-logo-img-tablet"></use>
             </svg>
-            <svg class=" page-header__logo-img page-header__logo-img--visible-desktop" width="147" height="40" aria-hidden="true" focusable="false">
+            <svg class="page-header__logo-img page-header__logo-img--visible-desktop" width="147" height="40" aria-hidden="true" focusable="false">
               <use href="img/sprite.svg#header-logo-img-desktop"></use>
             </svg>
           </a>
@@ -50,9 +50,9 @@
         <h1 class="page-title__inset-page">Конкурс на самое безбашенное<br>путешествие с Пинк</h1>
       </div>
     </header>
-    <main class="page-form sticky-footer">
+    <main class="sticky-footer">
       <section class="contest">
-        <h2 class="contest__title">Поделитесь своей историей и получите шанс выиграть ценный приз — 1000 миль на вашу бонусную карту!&thinsp;<span class="contest__title-text--hidden">Пожалуйста, заполните форму ниже:</span></h2>
+        <h2 class="contest__title">Поделитесь своей историей и получите шанс выиграть ценный приз — 1000 миль на вашу бонусную карту!&thinsp;<span class="contest__title-text contest__title-text--hidden">Пожалуйста, заполните форму ниже:</span></h2>
         <form class="contest__form" action="https://echo.htmlacademy.ru">
           <fieldset class="contest__user">
             <div class="field field--user">
@@ -141,7 +141,7 @@
             </div>
           </fieldset>
           <div class="contest__wrapper-button">
-            <button class="page-form__button contest__button" type="submit">Отправить форму</button>
+            <button class="button contest__button" type="submit">Отправить форму</button>
             <p class="contest__requared"><b class="contest__requared-mark">*</b> — обязательные <span class="contest__requared-hidden">для заполнения</span> поля</p>
           </div>
         </form>
@@ -204,7 +204,7 @@
           <p class="modal__text">Проверьте поля, выделенные красным, скорее всего вы забыли их заполнить</p>
         </div>
         <div class="modal__gray">
-          <button class="page-form__button modal__button" type="button">Ок</button>
+          <button class="button modal__button" type="button">Ок</button>
         </div>
       </div>
       <div class="modal__success modal__success--close">
@@ -213,7 +213,7 @@
           <p class="modal__text">Спасибо за ваше участие, ваша заявка уже поступила к нам. В ближайшее время мы рассмотрим ее и оповестим&nbsp;вас.</p>
         </div>
         <div class="modal__gray">
-          <button class="page-form__button modal__button modal__button--success-desktop" type="button">Закрыть окно</button>
+          <button class="button modal__button modal__button--success-desktop" type="button">Закрыть окно</button>
         </div>
       </div>
     </section>
