Исправления по защите

--- a/source/catalog.html
+++ b/source/catalog.html
@@ -9,6 +9,12 @@
     <link rel="apple-touch-icon" href="img/favicons/apple-icon-180x180.png" >
     <link rel="manifest" href="manifest.webmanifest">
     <link rel="stylesheet" href="css/style.min.css">
+    <link rel="preload" href="/fonts/opensans.woff2" as="font">
+    <link rel="preload" href="/fonts/opensans.woff" as="font">
+    <link rel="preload" href="/fonts/opensansbold.woff2" as="font">
+    <link rel="preload" href="/fonts/opensansbold.woff" as="font">
+    <link rel="preload" href="/fonts/opensanslight.woff2" as="font">
+    <link rel="preload" href="/fonts/opensanslight.woff" as="font">
   </head>
   <body>
     <header class="page-header page-header--inset">
