Для открытия в GitPages

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
-<html lang="ru">
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
   <meta http-equiv="refresh" content="0; URL=/source/index.html" />
 </head>
 <body>
