Для открытия в GitPages

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta http-equiv="refresh" content="0; URL=/source/index.html" />
+  <meta http-equiv="refresh" content="0; url=https:// https://heidvaldhalvardson.github.io/1351381-pink-24/source/index.html" />
   <title>Document</title>
 </head>
 <body>
