Для открытия в GitPages

--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-  <meta http-equiv="refresh" content="0; url=https:// https://heidvaldhalvardson.github.io/1351381-pink-24/build/index.html" />
+  <meta http-equiv="refresh" content="0; url=https://heidvaldhalvardson.github.io/1351381-pink-24/build/index.html" />
