--- a/index.html
+++ b/index.html
@@ -1,3 +1,13 @@
+  <!DOCTYPE html>
+  <html lang="en">
+  <head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="refresh" content="0; url=https://heidvaldhalvardson.github.io/1351381-pink-24/build/index.html" />
+    <title>Document</title>
+  </head>
+  <body>
 
-    <meta http-equiv="refresh" content="0; url=/heidvaldhalvardson.github.io/1351381-pink-24/build/index.html" />
-
+  </body>
+  </html>
